# python-project-52

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci-tests.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: permissions.py  settings.py  test.py  tests.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/staticfiles/: staticfiles.json
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_executor.py  0004_tasklabelrelation_task_labels.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task_detail.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_localuser_options.py
